# uvm-mocs

./: .gitignore  .replit  main.py  mocs_assignment_01.ipynb  pyproject.toml  replit.nix
.github/workflows/: python-tests.yml
assignment-02/: 02-1.py  analyze_batch_results.ipynb  core_simulation.py  percolate_spanning_test.ipynb  periodic_interventions.py  plots_from_simulation.py  post_stats.py  run-simple-forest-fire.py  run_many_iterations.ipynb  single_burn.py
assignment-02/1/: analyze_batch_results.ipynb  single_burn.py
assignment-02/2/: README.md  dla.py  dla_kkent.ipynb  test_dla.py
assignment-02/lib/: core_simulation.py  plots_from_simulation.py
assignment-03/: SomeVisualization.gephi  annotate.py  guava.annotated.graphml.gephi  integration_q2.ipynb  merge.py  question4_explore.ipynb  remove_inner_classes.py
assignment-03/03/: annotate.py  guava.annotated.graphml_weighted-edges.gephi  merge.py
assignment-03/data/: guava.annotated.filtered.graphml  guava.annotated.graphml  guava.annotated.graphml.gephi  guava.graphml  guava.map.csv
examples/: ContinuousLogistic.ipynb  LotkaVolterra.ipynb  animated_2d_ca.py  animated_ca.py  animation.py  discrete_model_example.py  logistic_growth.py  predator_prey.py
project/: analyze_dependency_graph.py  analyze_gitdelver.ipynb  convert_pydeps_json.py  diff_graphs.py  generate_depgraph_timeseries.py  generate_network_from_model.py  get_graphs_over_time.py  myers_refactoring_model.graphml  plot_degree_distributions.py  symm_attachment_test.ipynb
project/package_1/: a.py  (+1 more)
textbook_exercises/: PopPopularity.ipynb
(+1810 files in other folders)
