[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11.0"
numpy = "^1.22.2"
matplotlib = "^3.5.2"
pytest = "^7.1.3"
hypothesis = "^6.56.3"
pandas = "^1.5.1"
scipy = "^1.9.3"
networkx = "^2.8.8"
pygraphviz = "^1.10"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
